<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="tag_from" translatable="false">{{FROM}}</string>
    <string name="tag_sms" translatable="false">{{SMS}}</string>
    <string name="tag_package_name" translatable="false">{{PACKAGE_NAME}}</string>
    <string name="tag_app_name" translatable="false">{{APP_NAME}}</string>
    <string name="tag_msg" translatable="false">{{MSG}}</string>
    <string name="tag_card_slot" translatable="false">{{CARD_SLOT}}</string>
    <string name="tag_card_subid" translatable="false">{{CARD_SUBID}}</string>
    <string name="tag_receive_time" translatable="false">{{RECEIVE_TIME}}</string>
    <string name="tag_current_time" translatable="false">{{CURRENT_TIME}}</string>
    <string name="tag_device_name" translatable="false">{{DEVICE_NAME}}</string>
    <string name="tag_app_version" translatable="false">{{APP_VERSION}}</string>
    <string name="tag_title" translatable="false">{{TITLE}}</string>
    <string name="tag_call_type" translatable="false">{{CALL_TYPE}}</string>
    <string name="tag_location" translatable="false">{{LOCATION}}</string>
    <string name="tag_location_longitude" translatable="false">{{LOCATION_LONGITUDE}}</string>
    <string name="tag_location_latitude" translatable="false">{{LOCATION_LATITUDE}}</string>
    <string name="tag_location_address" translatable="false">{{LOCATION_ADDRESS}}</string>
    <string name="tag_battery_pct" translatable="false">{{BATTERY_PCT}}</string>
    <string name="tag_battery_status" translatable="false">{{BATTERY_STATUS}}</string>
    <string name="tag_battery_plugged" translatable="false">{{BATTERY_PLUGGED}}</string>
    <string name="tag_battery_info" translatable="false">{{BATTERY_INFO}}</string>
    <string name="tag_battery_info_simple" translatable="false">{{BATTERY_INFO_SIMPLE}}</string>
    <string name="tag_uid" translatable="false">{{UID}}</string>
    <string name="tag_ipv4" translatable="false">{{IPV4}}</string>
    <string name="tag_ipv6" translatable="false">{{IPV6}}</string>
    <string name="tag_ip_list" translatable="false">{{IP_LIST}}</string>
    <string name="tag_net_type" translatable="false">{{NET_TYPE}}</string>
    <string name="tag_contact_name" translatable="false">{{CONTACT_NAME}}</string>
    <string name="tag_phone_area" translatable="false">{{PHONE_AREA}}</string>
    <string name="tag_rule_title" translatable="false">{{RULE_TITLE}}</string>
    <string name="tag_court_case_no" translatable="false">{{COURT_CASE_NO}}</string>
    <string name="tag_court_links" translatable="false">{{COURT_LINKS}}</string>
    <string name="tag_court_dates" translatable="false">{{COURT_DATES}}</string>
    <string name="tag_need_download" translatable="false">{{NEED_DOWNLOAD}}</string>
    <string name="tag_need_calendar" translatable="false">{{NEED_CALENDAR}}</string>
    <string name="tag_court_summary" translatable="false">{{COURT_SUMMARY}}</string>
    <string name="insert_tag_from">来源号码</string>
    <string name="insert_tag_sms">短信内容</string>
    <string name="insert_tag_package_name">APP包名</string>
    <string name="insert_tag_app_name">APP应用名</string>
    <string name="insert_tag_title">通知标题</string>
    <string name="insert_tag_msg">通知内容</string>
    <string name="insert_tag_card_slot">卡槽备注</string>
    <string name="insert_tag_card_subid">卡槽主键</string>
    <string name="insert_tag_receive_time">接收时间</string>
    <string name="insert_tag_current_time">当前时间</string>
    <string name="insert_tag_device_name">设备名称</string>
    <string name="insert_tag_app_version">SmsF版本</string>
    <string name="insert_tag_call_type">通话类型</string>
    <string name="insert_tag_location">定位信息</string>
    <string name="insert_tag_location_longitude">定位经度</string>
    <string name="insert_tag_location_latitude">定位纬度</string>
    <string name="insert_tag_location_address">定位地址</string>
    <string name="insert_tag_battery_pct">电池电量</string>
    <string name="insert_tag_battery_status">电池状态</string>
    <string name="insert_tag_battery_plugged">充电方式</string>
    <string name="insert_tag_battery_info">电池完整信息</string>
    <string name="insert_tag_battery_info_simple">电池简单信息</string>
    <string name="insert_tag_uid">用户UID</string>
    <string name="insert_tag_ipv4">公网IPv4</string>
    <string name="insert_tag_ipv6">公网IPv6</string>
    <string name="insert_tag_ip_list">IP地址列表</string>
    <string name="insert_tag_net_type">网络状态</string>
    <string name="insert_tag_contact_name">来源姓名</string>
    <string name="insert_tag_phone_area">来源归属</string>
    <string name="insert_tag_rule_title">规则别名</string>
    <string name="type_param_sms">短信</string>
    <string name="type_param_call">通话</string>
    <string name="type_param_app">应用</string>
    <string name="status_param_option_enabled">已启用</string>
    <string name="status_param_option_disabled">已禁用</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="sms_type_option_receive">接收</string>
    <string name="sms_type_option_send">发送</string>
    <string name="call_type_option_missed">未接来电</string>
    <string name="call_type_option_call_out">本机去电</string>
    <string name="call_type_option_received">已接来电</string>
    <string name="clone_type_option_network">网络模式</string>
    <string name="clone_type_option_offline">离线模式</string>
    <string name="app_type_option_user">用户应用</string>
    <string name="app_type_option_system">系统应用</string>
    <string name="task_type_option_mine">我的任务</string>
    <string name="task_type_option_fixed">任务中心</string>
    <string name="app_browser_name">通用浏览器</string>
    <string name="description_navigation_main">导航条</string>
    <string name="menu_logs">日志</string>
    <string name="menu_senders">发送通道</string>
    <string name="menu_rules">规则</string>
    <string name="menu_settings">设置</string>
    <string name="court_brand">法院短信转发器</string>
    <string name="court_logs_subtitle">查看已转发的法院短信</string>
    <string name="court_rules_subtitle">匹配 12368 等法院短信并转发</string>
    <string name="court_action_back">返回</string>
    <string name="court_action_filter">筛选</string>
    <string name="court_action_clear">清空</string>
    <string name="court_action_add">添加</string>
    <string name="court_action_edit">编辑</string>
    <string name="court_action_more">管理</string>
    <string name="court_settings_title">设置</string>
    <string name="court_settings_intro">填写邮箱与授权码后，法院短信会自动转发</string>
    <string name="court_field_email">邮箱</string>
    <string name="court_field_auth">授权码</string>
    <string name="court_save">保存</string>
    <string name="court_restore_rules">恢复预置规则</string>
    <string name="court_forward_enabled">短信转发</string>
    <string name="court_forward_enabled_hint">关闭后将暂停所有短信转发</string>
    <string name="court_empty_logs">暂无转发记录</string>
    <string name="court_empty_rules">暂无规则</string>
    <string name="menu_settings_step">通用设置·第一步</string>
    <string name="menu_senders_step">发送通道·第二步</string>
    <string name="menu_rules_step">转发规则·第三步</string>
    <string name="menu_logs_step">转发日志·第四步</string>
    <string name="menu_tasks">自动任务·快捷指令</string>
    <string name="menu_server">主动控制·服务端</string>
    <string name="menu_client">主动控制·客户端</string>
    <string name="menu_frpc">内网穿透·Frpc</string>
    <string name="menu_apps">应用列表·复制包名</string>
    <string name="menu_logcat">日志抓取·Logcat</string>
    <string name="menu_help">使用帮助</string>
    <string name="menu_about">关于软件</string>
    <string name="about_app_version">软件版本：%s</string>
    <string name="about_app_version_tips" formatted="false">版本名称：%s\n版本代码：%s\n构建时间：%s\nGit提交ID：%s</string>
    <string name="about_cache_size">缓存大小：%s</string>
    <string name="about_frpc_version">Frpc版本：%s</string>
    <string name="about_item_wechat_miniprogram" formatted="false">微信小程序</string>
    <string name="about_cache_purged">已清理缓存</string>
    <string name="about_frpc_deleted">已删除动态库，重启APP以便生效！</string>
    <string name="about_copyright">© %1$s 法院短信转发器</string>
    <string name="about_item_open_source">开源仓库</string>
    <string name="about_item_github">GitHub</string>
    <string name="about_item_gitee">Gitee</string>
    <string name="about_item_donation_link">打赏名单</string>
    <string name="url_project_github">https://github.com/SenryLee/CourtSmsForwarder</string>
    <string name="url_project_gitee">https://github.com/SenryLee/CourtSmsForwarder</string>
    <string name="url_help">https://github.com/SenryLee/CourtSmsForwarder#readme</string>
    <string name="url_donation_link">https://gitee.com/pp/SmsForwarder.wiki/raw/master/%E6%89%93%E8%B5%8F%E5%90%8D%E5%8D%95.md</string>
    <string name="url_wechat_miniprogram">https://gitee.com/pp/SmsForwarder/raw/main/pic/wechat_miniprogram.jpg</string>
    <string name="url_tips">https://gitee.com/pp/SmsForwarder.wiki/raw/master/tips.json</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_qq_app">是否允许页面打开"QQ"?</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。\n\n如果你不同意该政策，很遗憾我们将无法为你提供服务！</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <string name="refresh_web">刷新网页</string>
    <string name="copy_link">复制链接</string>
    <string name="share_web">网页分享</string>
    <string name="open_in_default_browser">在浏览器打开</string>
    <string name="provided_by_agentweb">技术由 AgentWeb 提供</string>
    <string name="logo">Logo</string>
    <string name="action_save">保存配置</string>
    <string name="action_back">返回编辑</string>
    <string name="action_quit">放弃修改</string>
    <string name="action_test">测试规则</string>
    <string name="title_save_config">保存Frpc配置</string>
    <string name="tips_input_config_content">请输入配置内容</string>
    <string name="tips_input_config_name">请输入配置名称</string>
    <string name="tipSaveSuccess">保存成功</string>
    <string name="tipRestoreSuccess">还原成功</string>
    <string name="noName">未命名</string>
    <string name="copySuccess">复制成功</string>
    <string name="tipServiceRunning">Frpc内网穿透服务运行中</string>
    <string name="tipWaitService">正在启动服务</string>
    <string name="app_name">法院短信转发器</string>
    <string name="notification_content">法院短信自动转发至邮箱</string>
    <string name="court_mode_title">写入法院规则</string>
    <string name="court_mode_content">将写入默认法院规则（12368 / 关键词+案号），并启用结构化邮件模板。</string>
    <string name="court_mode_success">已写入 %d 条法院转发规则</string>
    <string name="court_mode_no_sender">请先在设置中填写邮箱与授权码</string>
    <string name="court_mode_already">法院规则已存在</string>
    <string name="court_mode_failed">写入法院规则失败，请重试</string>
    <string name="court_settings_email_section">邮箱</string>
    <string name="court_settings_email_hint">推荐 QQ / Foxmail。授权码在邮箱网页「设置 → 账户」中生成，不是登录密码。</string>
    <string name="court_settings_email">邮箱地址</string>
    <string name="court_settings_auth_code">授权码</string>
    <string name="court_settings_auth_code_helper">不是登录密码</string>
    <string name="court_settings_save_email">保存</string>
    <string name="court_settings_basic_section">转发</string>
    <string name="court_settings_enable_sms">启用短信转发</string>
    <string name="court_settings_apply_rules">恢复预置规则</string>
    <string name="court_settings_about_section">关于</string>
    <string name="court_settings_about_desc">识别法院短信并转发到邮箱，方便后续整理与提醒。</string>
</resources>